--- a/project.yml
+++ b/project.yml
@@ -11,6 +11,7 @@ git:
     default_branch: master
     remotes:
         - 'bolt8@svn-5223.devcloud.hosting.acquia.com:bolt8.git'
+        - 'eecospina@svn-12800.prod.hosting.acquia.com:eecospina.git'
 drush:
     aliases:
         remote: '${project.machine_name}.test'
